<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.czy</groupId>
    <artifactId>base</artifactId>
    <version>1.0-SNAPSHOT</version>
    <!--父模块必须是pom类型打包-->
    <packaging>pom</packaging>
    <modules>
        <module>../fishGame</module>
        <module>../fx</module>
        <module>../core</module>
        <module>../util</module>
        <module>../mq</module>
        <module>../javase_study</module>
        <module>../psychology</module>
        <module>../car_server</module>
        <module>../car_client</module>
        <module>../question_bank</module>
        <module>../server_container</module>
    </modules>
    <properties>
        <encoding>UTF-8</encoding>
        <java.version>14</java.version>
        <maven-plugin.version>3.8.1</maven-plugin.version>
        <dbcp.version>1.4</dbcp.version>
        <junit.version>4.12</junit.version>
        <mysql.version>8.0.16</mysql.version>
        <cglib.version>3.3.0</cglib.version>
        <jedis.version>2.6.0</jedis.version>
        <commons-lang3.version>3.3.2</commons-lang3.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <log4j.version>2.4.1</log4j.version>
        <slf4j.version>1.7.13</slf4j.version>
        <ws.rs-api.version>2.1</ws.rs-api.version>
        <org.cxf-version>3.3.2</org.cxf-version>
        <jackson.version>2.10.3</jackson.version>
        <catalina.version>8.5.11</catalina.version>
        <druid.version>1.1.8</druid.version>
        <yaml.version>1.3</yaml.version>
        <snakeyaml.version>1.24</snakeyaml.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <commons-pool.version>1.5.6</commons-pool.version>
        <mybatis.version>3.5.3</mybatis.version>
        <javafx.version>11.0.2</javafx.version>
        <junit.version>4.12</junit.version>
        <rabbitmq.version>5.9.0</rabbitmq.version>
        <servlet.version>4.0.1</servlet.version>
        <czy.version>1.0-SNAPSHOT</czy.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${servlet.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>car_client</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>car_server</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>core</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>fishGame</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>fx</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>javase_study</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>mq</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>psychology</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>util</artifactId>
                <version>${czy.version}</version>
            </dependency>


            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <!--rabbitmq-->
            <dependency>
                <groupId>com.rabbitmq</groupId>
                <artifactId>amqp-client</artifactId>
                <version>${rabbitmq.version}</version>
            </dependency>

            <!--动态代理-->
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
            <!--json-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <!--yml配置文件-->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jyaml</groupId>
                <artifactId>jyaml</artifactId>
                <version>${yaml.version}</version>
            </dependency>
            <!--数据库-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <!--redis缓存-->
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${jedis.version}</version>
            </dependency>
            <!--apache工具类-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <!-- slf4j核心包-->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.13</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>1.7.13</version>
                <scope>runtime</scope>
            </dependency>
            <!--核心log4j2jar包-->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.4.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.4.1</version>
            </dependency>
            <!--用于与slf4j保持桥接-->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>2.4.1</version>
            </dependency>
            <!--        javafx-->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>${javafx.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>
    <dependencies>
        <!-- slf4j核心包-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
        </dependency>
        <!--核心log4j2jar包-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <!--用于与slf4j保持桥接-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
    </dependencies>
    <build>
        <!--  <resources>
              <resource>
                  <directory>${basedir}/src/main/resource</directory>
              </resource>
          </resources>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>